[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/resultES.gd" type="Script" id=1]
[ext_resource path="res://decorations/peça 1.png" type="Texture" id=2]
[ext_resource path="res://decorations/peça 2.png" type="Texture" id=3]
[ext_resource path="res://decorations/pixil-frame-0.png" type="Texture" id=4]
[ext_resource path="res://decorations/peça 3.png" type="Texture" id=5]
[ext_resource path="res://scripts/zoneES.gd" type="Script" id=6]
[ext_resource path="res://scripts/timerES.gd" type="Script" id=7]
[ext_resource path="res://scripts/globals.gd" type="Script" id=8]
[ext_resource path="res://PixelIntv-OPxd.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://decorations/PixelIntv-OPxd.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=11]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 171, 261.5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 66.2621, 16.9015 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 90.9677, 19.1667 )

[sub_resource type="DynamicFont" id=6]
size = 39
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=7]
size = 12
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=8]
size = 35
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=9]
size = 22
font_data = ExtResource( 9 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Pos1" type="Node2D" parent="."]
position = Vector2( 1250, 233 )

[node name="Pos2" type="Node2D" parent="."]
position = Vector2( 1249, 341 )

[node name="Pos3" type="Node2D" parent="."]
position = Vector2( 1249, 442 )

[node name="Pos4" type="Node2D" parent="."]
position = Vector2( 1249, 544 )

[node name="Pos5" type="Node2D" parent="."]
position = Vector2( 1250, 645 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=["Barra"]]
position = Vector2( 321, 50 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D" groups=["Barra"]]
position = Vector2( 928, 392.5 )
shape = SubResource( 3 )

[node name="Global" type="Node" parent="KinematicBody2D"]
script = ExtResource( 8 )

[node name="Pixil-frame-0" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 951, 382 )
scale = Vector2( 6.43, 5.94 )
texture = ExtResource( 4 )

[node name="BlocoDeCodigo" type="Area2D" parent="."]
position = Vector2( 550, 704 )
scale = Vector2( 2.39202, 2.12999 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}
blockType = "0"

[node name="Sprite" type="Sprite" parent="BlocoDeCodigo"]
position = Vector2( -3.1877, -2.34745 )
scale = Vector2( 1.75606, 1.17708 )
texture = ExtResource( 2 )

[node name="inicio" type="Label" parent="BlocoDeCodigo"]
margin_left = -25.5015
margin_top = -15.0236
margin_right = 14.4985
margin_bottom = 3.97643
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 4 )
text = "Início"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlocoDeCodigo"]
position = Vector2( -2.29939, 2.34743 )
shape = SubResource( 5 )

[node name="BlocoDeCodigo2" type="Area2D" parent="."]
position = Vector2( 819, 381 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}
blockType = "1"

[node name="Sprite" type="Sprite" parent="BlocoDeCodigo2"]
position = Vector2( -19.5, -7.625 )
scale = Vector2( 4.17708, 2.38281 )
texture = ExtResource( 3 )

[node name="meio 1" type="Label" parent="BlocoDeCodigo2"]
margin_left = -129.0
margin_top = -19.0
margin_right = 55.0
margin_bottom = 36.0
rect_scale = Vector2( 1.5, 1.5 )
text = "alimentos = 100
humanos = 500"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlocoDeCodigo2"]
position = Vector2( 0, 7 )
scale = Vector2( 1.55, 1.8 )
shape = SubResource( 2 )

[node name="BlocoDeCodigo3" type="Area2D" parent="."]
position = Vector2( 233, 372 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}
blockType = "2"

[node name="Sprite" type="Sprite" parent="BlocoDeCodigo3"]
position = Vector2( -21.2497, -9.00003 )
scale = Vector2( 4.17187, 2.35937 )
texture = ExtResource( 3 )

[node name="meio 2" type="Label" parent="BlocoDeCodigo3"]
margin_left = -152.0
margin_top = -5.0
margin_right = 45.0001
margin_bottom = 9.0
rect_rotation = -359.453
rect_scale = Vector2( 1.5, 1.5 )
text = "resultado = alimento/humanos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlocoDeCodigo3"]
position = Vector2( -2.74997, 3 )
scale = Vector2( 1.55, 1.8 )
shape = SubResource( 2 )

[node name="BlocoDeCodigo4" type="Area2D" parent="."]
position = Vector2( 382, 543 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}
blockType = "3"

[node name="Sprite" type="Sprite" parent="BlocoDeCodigo4"]
position = Vector2( -19, -9.50001 )
scale = Vector2( 4.16667, 2.40625 )
texture = ExtResource( 3 )

[node name="meio 3" type="Label" parent="BlocoDeCodigo4"]
margin_left = -99.0
margin_top = -8.0
margin_right = 11.0
margin_bottom = 6.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Print ( resultado )"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlocoDeCodigo4"]
position = Vector2( 1.25, 2.25 )
scale = Vector2( 1.55, 1.8 )
shape = SubResource( 2 )

[node name="BlocoDeCodigo5" type="Area2D" parent="."]
position = Vector2( 661, 172 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}
blockType = "4"

[node name="Sprite" type="Sprite" parent="BlocoDeCodigo5"]
position = Vector2( -6.99933, -14 )
scale = Vector2( 4.17708, 2.11458 )
texture = ExtResource( 5 )

[node name="fim" type="Label" parent="BlocoDeCodigo5"]
margin_left = -57.0
margin_top = -35.0
margin_right = 9.0
margin_bottom = 12.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 6 )
text = "Fim"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlocoDeCodigo5"]
position = Vector2( -3.99997, 7.5 )
scale = Vector2( 1.55, 1.8 )
shape = SubResource( 2 )

[node name="Time" type="Label" parent="."]
margin_left = 1411.0
margin_top = 37.0
margin_right = 1460.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 7 )
text = "03:00"
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="Time"]

[node name="botao_sair" type="Button" parent="."]
margin_left = 47.0
margin_top = 29.0
margin_right = 175.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 8 )
text = "Sair"
flat = true

[node name="botao_reset" type="Button" parent="."]
margin_left = 719.0
margin_top = 29.0
margin_right = 853.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 9 )
text = "RESETAR"

[connection signal="body_entered" from="BlocoDeCodigo" to="BlocoDeCodigo" method="_on_BlocoDeCodigo_body_entered"]
[connection signal="body_exited" from="BlocoDeCodigo" to="BlocoDeCodigo" method="_on_BlocoDeCodigo_body_exited"]
[connection signal="mouse_entered" from="BlocoDeCodigo" to="BlocoDeCodigo" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="BlocoDeCodigo" to="BlocoDeCodigo" method="_on_Area2D_mouse_exited"]
[connection signal="body_entered" from="BlocoDeCodigo2" to="BlocoDeCodigo2" method="_on_BlocoDeCodigo_body_entered"]
[connection signal="body_exited" from="BlocoDeCodigo2" to="BlocoDeCodigo2" method="_on_BlocoDeCodigo_body_exited"]
[connection signal="mouse_entered" from="BlocoDeCodigo2" to="BlocoDeCodigo2" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="BlocoDeCodigo2" to="BlocoDeCodigo2" method="_on_Area2D_mouse_exited"]
[connection signal="body_entered" from="BlocoDeCodigo3" to="BlocoDeCodigo3" method="_on_BlocoDeCodigo_body_entered"]
[connection signal="body_exited" from="BlocoDeCodigo3" to="BlocoDeCodigo3" method="_on_BlocoDeCodigo_body_exited"]
[connection signal="mouse_entered" from="BlocoDeCodigo3" to="BlocoDeCodigo3" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="BlocoDeCodigo3" to="BlocoDeCodigo3" method="_on_Area2D_mouse_exited"]
[connection signal="body_entered" from="BlocoDeCodigo4" to="BlocoDeCodigo4" method="_on_BlocoDeCodigo_body_entered"]
[connection signal="body_exited" from="BlocoDeCodigo4" to="BlocoDeCodigo4" method="_on_BlocoDeCodigo_body_exited"]
[connection signal="mouse_entered" from="BlocoDeCodigo4" to="BlocoDeCodigo4" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="BlocoDeCodigo4" to="BlocoDeCodigo4" method="_on_Area2D_mouse_exited"]
[connection signal="body_entered" from="BlocoDeCodigo5" to="BlocoDeCodigo5" method="_on_BlocoDeCodigo_body_entered"]
[connection signal="body_exited" from="BlocoDeCodigo5" to="BlocoDeCodigo5" method="_on_BlocoDeCodigo_body_exited"]
[connection signal="mouse_entered" from="BlocoDeCodigo5" to="BlocoDeCodigo5" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="BlocoDeCodigo5" to="BlocoDeCodigo5" method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="Time/Timer" to="Time" method="_on_Timer_timeout"]
[connection signal="pressed" from="botao_sair" to="." method="_on_botao_sair_pressed"]
[connection signal="pressed" from="botao_reset" to="." method="_on_botao_reset_pressed"]
